# c-basic

./: .gitignore  7-teiler.c  CMakeLists.txt  Makefile  README.md  TODO.md  arrToBin.c  ascii.c  build.sh  cmake_install.cmake  compile-all.sh  compile-and-run.sh  compile.sh  compiler-test  complex.c  dump.c  echo.c  echochar.c  fail  fail.c  pointermagic.c  primenumbers.c  quersumme.c  readfile.c  redefinition-if.c  redefinition.c  return-specified  return-specified.c  scanf-test.c  signed-to-unsigned.c  success.c  sum.c  tabtest.c  unary-double-not.c  warning.c
huffman/: README.md  huffman.c
src/: abc.c  adder.c  args.c  calculator.c  callreference.c  circular_shift.c  dividableBy7.c  echo.c  euler.c  factorial.c  fib.c  miniio.c  options.c  pointer-arithmetic.c  print-system-constants.c  readfile.c  scnaf-hex-test.c  sizeofs.c  stackoverflow.c  umlaut.c  while-to-do-while.c
src/huffman/src/: huffman.c
