cmake_minimum_required(VERSION 3.0)

project(base)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
include_directories(${PROJECT_SOURCE_DIR})
add_executable( abc                     src/abc.c                   ) 
add_executable( adder                   src/adder.c                 ) 
add_executable( args                    src/args.c                  ) 
add_executable( arrToBin                src/arrToBin.c              ) 
add_executable( ascii                   src/ascii.c                 ) 
add_executable( calculator              src/calculator.c            ) 
add_executable( callreference           src/callreference.c         ) 
add_executable( complex                 src/complex.c               ) 
add_executable( dividableBy7            src/dividableBy7.c          ) 
add_executable( structdump              src/structdump.c            ) 
add_executable( echo                    src/echo.c                  ) 
add_executable( echochar                src/echochar.c              ) 
add_executable( euler                   src/euler.c                 ) 
add_executable( factorial               src/factorial.c             ) 
add_executable( fail                    src/fail.c                  ) 
add_executable( fread                   src/fread.c                 ) 
add_executable( hello-world             src/hello-world.c           ) 
add_executable( options                 src/options.c               ) 
add_executable( pointermagic            src/pointermagic.c          ) 
add_executable( primenumbers            src/primenumbers.c          ) 
add_executable( quersumme               src/quersumme.c             ) 
add_executable( readfile                src/readfile.c              ) 
add_executable( redefinition            src/redefinition.c          ) 
add_executable( redefinition-if         src/redefinition-if.c       ) 
add_executable( return-specified        src/return-specified.c      ) 
add_executable( scanf-test              src/scanf-test.c            ) 
add_executable( scnaf-hex-test          src/scnaf-hex-test.c        ) 
add_executable( signed-to-unsigned      src/signed-to-unsigned.c    ) 
add_executable( sizeofs                 src/sizeofs.c               ) 
add_executable( success                 src/success.c               ) 
add_executable( sum                     src/sum.c                   ) 
add_executable( tabtest                 src/tabtest.c               ) 
add_executable( umlaut                  src/umlaut.c                ) 
add_executable( unary-double-not        src/unary-double-not.c      ) 
add_executable( warning                 src/warning.c               ) 
add_executable( pointer-arithmetic      src/pointer-arithmetic.c    ) 

target_link_libraries(abc m)    # link libm to abc
